# 3d-camera

./: CMakeLists.txt  README.md  main.cpp
lib/cyril/: CMakeLists.txt  Camera.cpp  Camera.h  CyrilRuntime.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Window.h  cyril.h  cyrilMain.h
shaders/: basic.fs  basic.vs
